--- a/iDaBere/app/src/main/res/layout/activity_item_info.xml
+++ b/iDaBere/app/src/main/res/layout/activity_item_info.xml
@@ -80,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/item_info_description_title"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:textSize="@dimen/paragraph_title_size"
+                android:textSize="@dimen/title_text_size"
                 android:textStyle="bold" />
 
             <TextView
