--- a/iDaBere/app/src/main/res/menu/review_order_bottom_navigation.xml
+++ b/iDaBere/app/src/main/res/menu/review_order_bottom_navigation.xml
@@ -5,6 +5,7 @@
 
     <item
         android:id="@+id/navigation_confirm_payment"
+        android:icon="@drawable/ic_keyboard_arrow_left_white_24dp"
         android:title="@string/title_menu_list" />
 
     <item
