--- a/iDaBere/app/src/main/res/layout/activity_review_order.xml
+++ b/iDaBere/app/src/main/res/layout/activity_review_order.xml
@@ -28,14 +28,50 @@
         app:contentInsetLeft="0dp"
         app:contentInsetStart="0dp">
 
-        <android.support.design.widget.BottomNavigationView
-            android:id="@+id/navigation"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            android:background="@color/colorPrimaryLight"
-            app:menu="@menu/review_order_bottom_navigation" />
+            android:layout_height="wrap_content"
+            android:visibility="visible">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:paddingBottom="@dimen/activity_vertical_margin">
+
+                <TextView
+                    android:id="@+id/review_total_order_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/menu_list_item_price"
+                    android:textSize="@dimen/title_text_size"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/review_total_order_price_currency"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/menu_list_item_currency"
+                    android:textSize="@dimen/title_text_size"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
+
+
+
+            <android.support.design.widget.BottomNavigationView
+                android:id="@+id/navigation"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:background="@color/colorPrimaryLight"
+                app:menu="@menu/review_order_bottom_navigation"
+                android:translationZ="-10sp"/>
+
+        </FrameLayout>
+
+
 
     </android.support.v7.widget.Toolbar>
 
