--- a/iDaBere/app/src/main/res/menu/review_order_bottom_navigation.xml
+++ b/iDaBere/app/src/main/res/menu/review_order_bottom_navigation.xml
@@ -10,10 +10,11 @@
 
     <item
         android:id="@+id/navigation_total_price"
-        android:title="@string/title_total_price"/>
+        android:title="@string/title_total_price" />
 
     <item
         android:id="@+id/navigation_payment_type"
+        android:icon="@drawable/ic_keyboard_arrow_right_white_24dp"
         android:title="@string/title_delivery_place" />
 
 </menu>
