--- a/iDaBere/app/src/main/res/layout/menu_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_item.xml
@@ -24,13 +24,13 @@
                 android:id="@+id/item_infos_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="@dimen/activity_horizontal_margin">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="@dimen/activity_horizontal_margin">
+                    android:layout_gravity="center_vertical">
 
                     <TextView
                         android:id="@+id/info_text"
@@ -45,7 +45,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_margin="@dimen/activity_horizontal_margin"
                     android:gravity="center_vertical|right">
 
                     <TextView
@@ -73,7 +72,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:padding="@dimen/activity_vertical_margin"
+                android:visibility="visible">
 
 
                 <ListView
