--- a/iDaBere/app/src/main/res/layout/activity_search_bar.xml
+++ b/iDaBere/app/src/main/res/layout/activity_search_bar.xml
@@ -13,11 +13,21 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <android.support.v7.widget.RecyclerView
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ListView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </android.support.v7.widget.RecyclerView>
+            android:layout_height="wrap_content">
+
+        </ListView>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TEST: vai al menu"
+            android:onClick="goToMenuTest"/>
+
     </LinearLayout>
 
 </LinearLayout>
