--- a/iDaBere/app/src/main/res/layout/menu_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_item.xml
@@ -73,7 +73,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:padding="@dimen/activity_vertical_margin"
-                android:visibility="visible">
+                android:visibility="gone">
 
 
                 <ListView
