--- a/iDaBere/app/src/main/res/layout/activity_review_order.xml
+++ b/iDaBere/app/src/main/res/layout/activity_review_order.xml
@@ -60,7 +60,7 @@
 
 
             <android.support.design.widget.BottomNavigationView
-                android:id="@+id/navigation"
+                android:id="@+id/review_bottom_navigation"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="bottom"
