--- a/iDaBere/app/src/main/res/layout/activity_list_bar.xml
+++ b/iDaBere/app/src/main/res/layout/activity_list_bar.xml
@@ -17,6 +17,7 @@
         android:orientation="vertical">
 
         <ListView
+            android:id="@+id/bars_list_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
