--- a/iDaBere/app/src/main/res/layout/menu_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_item.xml
@@ -73,7 +73,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:padding="@dimen/activity_vertical_margin"
-                android:visibility="gone">
+                android:visibility="visible">
 
 
                 <ListView
@@ -85,7 +85,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="@string/add_new_drink_button"/>
+                    android:text="@string/add_new_drink_button" />
 
             </LinearLayout>
 
