--- a/iDaBere/app/src/main/res/layout/menu_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_item.xml
@@ -73,19 +73,34 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:padding="@dimen/activity_vertical_margin"
-                android:visibility="visible">
+                android:visibility="gone">
 
 
                 <ListView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
-                <Button
-                    android:id="@+id/new_item_button"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/add_new_drink_button" />
+                    android:orientation="horizontal"
+                    android:layout_weight="2">
+
+                    <Button
+                        android:id="@+id/new_item_button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/add_new_drink_button" />
+
+                    <Button
+                        android:id="@+id/info_item_button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/item_info_button_label"
+                        android:layout_weight="1"/>
+
+                </LinearLayout>
 
             </LinearLayout>
 
