--- a/iDaBere/app/src/main/res/layout/activity_payment_type.xml
+++ b/iDaBere/app/src/main/res/layout/activity_payment_type.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-
     tools:context="it.unitn.disi.lpsmt.idabere.activities.LoginActivity">
 
     <LinearLayout
@@ -40,50 +39,61 @@
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
                     android:text="@string/credit_card_radio_button_label"
                     android:textSize="@dimen/title_text_size"/>
 
-                <View
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@android:color/darker_gray"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/activity_vertical_margin"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:text="@string/credit_card_info"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin" />
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>
 
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="@dimen/activity_horizontal_margin"
-                    android:text="@string/credit_card_choice_label"
-                    android:textSize="@dimen/paragraph_text_size"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="@dimen/activity_horizontal_margin"
+                        android:text="@string/credit_card_choice_label"
+                        android:textSize="@dimen/title_text_size"
+                        android:textStyle="bold"
+                        android:layout_marginTop="@dimen/activity_vertical_margin"
+                        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+
+                    <Spinner
+                        android:id="@+id/credit_card_drop_down"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                    </Spinner>
+
+
+                </LinearLayout>
+
+
 
 
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
                     android:text="@string/cash_payment_button_label"
                     android:textSize="@dimen/title_text_size" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@android:color/darker_gray"
-                    android:layout_marginTop="@dimen/activity_vertical_margin"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>
 
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/cash_payment_info"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin" />
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>
 
             </RadioGroup>
 
