--- a/iDaBere/app/src/main/res/layout/activity_payment_type.xml
+++ b/iDaBere/app/src/main/res/layout/activity_payment_type.xml
@@ -57,19 +57,21 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingLeft="@dimen/activity_horizontal_margin"
                         android:text="@string/credit_card_choice_label"
                         android:textSize="@dimen/title_text_size"
                         android:textStyle="bold"
                         android:layout_marginTop="@dimen/activity_vertical_margin"
-                        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+                        android:layout_marginBottom="@dimen/activity_vertical_margin"
+                        android:layout_weight="1"/>
 
                     <Spinner
                         android:id="@+id/credit_card_drop_down"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center">
 
                     </Spinner>
 
