--- a/iDaBere/app/src/main/res/layout/activity_delivery_place.xml
+++ b/iDaBere/app/src/main/res/layout/activity_delivery_place.xml
@@ -63,19 +63,21 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/activity_vertical_margin"
                             android:layout_marginBottom="@dimen/activity_vertical_margin"
                             android:paddingLeft="@dimen/activity_horizontal_margin"
                             android:text="@string/counter_choice_label"
                             android:textSize="@dimen/title_text_size"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            android:layout_weight="1"/>
 
                         <Spinner
                             android:id="@+id/counters_drop_down"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center">
 
                         </Spinner>
 
@@ -102,19 +104,21 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/activity_vertical_margin"
                             android:layout_marginBottom="@dimen/activity_vertical_margin"
                             android:paddingLeft="@dimen/activity_horizontal_margin"
                             android:text="@string/table_choice_label"
                             android:textSize="@dimen/title_text_size"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            android:layout_weight="1" />
 
                         <Spinner
                             android:id="@+id/tables_drop_down"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center">
 
                         </Spinner>
 
